--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.17.1",
     "ffmpeg-binaries": "^4.0.0",
     "opusscript": "^0.0.7",
-    "ytdl-core": "^0.29.5"
+    "ytdl-core": "^0.29.5",
+    "node": "v10.16.0"
   }
 }
